2009-10-01	fabian

	* Tweaked close confirmation behavior.
	
2009-09-30	fabian

	* Bookmark sort now an option.
	* Folder name in bookmarks window is now editable.
	* Double-clicking folder names to expand/collapse them.
	* Fixed a bug that stops one to create a bbookmark in an empty folder.
	
2009-09-29	fabian

	* Implemented xterm's window report sequences.
	
2008-09-28	fabian

	* now iTerm uses just one thread to avoid synchronization problem.
	* Removed all the locks/semaphores, coz we no longer need them
	* Fixed a bug of processing wrapping text.
	* Fixed DECCOLM: now screens are correctly cleared.


2008-09-24  fabian

    * Cleaned up for the 0.9.6 release.
    * Fixed a few Panther building problems (haven't tested under Panther).
    
2008-09-23	delx

	* Backed out duplicate change.
	* Don't allow toggling transparency in full screen mode
	* Full screen windows get a window title
	* Restore windows to correct positions after full screen

2008-09-22  fabian
    
    * Fixed a bug that enables blur when de-miniaturizing windows.
	* Disable transparency in the full screen mode.
	* Fixed a transparency consistency problem when moving tabs between windows.
    
2008-09-20	fabian

	* Added support of ESC\ as the end of string to VT100Terminal.
	
2008-09-18  fabian

    * Minor UI change: Double-clicking a bookmark item now launches it.
    * UI change: Now bookmarks are sorted alphabetically.
    * UI change: Now you can open all items in a bookmark folder from the bookmark window.
    * UI change: The bookmarks window now has a column for shortcut key.
    * Minor UI change: Added shortcut key for menu Reset and Return to Default Size.
    * UI change: Double-clicking the tab bar now launches new tab.
    * UI change: Double-clicking the key-binding list now opens the edit sheet.
    * Fixed a bug that crashes iTerm when a profile is deleted.
    
2008-09-17  fabian

    * UI change: now there's separate close warning option plus a ">1" tab option.